--- a/style/tex-gyre-schola/style.scss
+++ b/style/tex-gyre-schola/style.scss
@@ -1,7 +1,9 @@
+$here: 'style/tex-gyre-schola';
+
 @font-face
 {
     font-family: 'TeX Gyre Schola';
-    src: url('tex-gyre-schola/regular.woff');
+    src: url("#{$here}/regular.woff");
     font-weight: normal;
     font-style: normal;
 }
@@ -9,7 +11,7 @@
 @font-face
 {
     font-family: 'TeX Gyre Schola';
-    src: url('tex-gyre-schola/bold.woff');
+    src: url("#{$here}/bold.woff");
     font-weight: bold;
     font-style: normal;
 }
@@ -17,7 +19,7 @@
 @font-face
 {
     font-family: 'TeX Gyre Schola';
-    src: url('tex-gyre-schola/italic.woff');
+    src: url("#{$here}/italic.woff");
     font-weight: normal;
     font-style: italic;
 }
@@ -25,7 +27,7 @@
 @font-face
 {
     font-family: 'TeX Gyre Schola';
-    src: url('tex-gyre-schola/bolditalic.woff');
+    src: url("#{$here}/bolditalic.woff");
     font-weight: bold;
     font-style: italic;
 }
