--- a/style/design.scss
+++ b/style/design.scss
@@ -36,6 +36,29 @@ a:hover
     text-decoration: underline;
 }
 
+:target
+{
+    position: relative;
+    animation-name: shake;
+    animation-duration: 0.05s;
+    animation-iteration-count: 4;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes shake
+{
+    from
+    {
+        left: -2px;
+    }
+
+    to
+    {
+        left: 2px;
+    }
+}
+
 body > header
 {
     background-color: inherit;
@@ -88,7 +111,24 @@ body > header
     {
         color: $accent-color;
     }
+
+    a.anchor
+    {
+        color: inherit;
+
+        &:hover
+        {
+            text-decoration: none;
+        }
+
+        &:hover::after
+        {
+            content: "#";
+            color: $accent-color;
+        }
+    }
 }
+
 
 footer
 {
