--- a/style/design.scss
+++ b/style/design.scss
@@ -38,24 +38,24 @@ a:hover
 
 :target
 {
-    position: relative;
-    animation-name: shake;
-    animation-duration: 0.05s;
-    animation-iteration-count: 4;
+    animation-name: highlight;
+    animation-duration: 0.5s;
+    animation-iteration-count: 2;
     animation-direction: alternate;
     animation-timing-function: ease-in-out;
+    opacity: 1;
 }
 
-@keyframes shake
+@keyframes highlight
 {
     from
     {
-        left: -2px;
+        opacity: 1;
     }
 
     to
     {
-        left: 2px;
+        opacity: 0;
     }
 }
 
