--- a/style/design.scss
+++ b/style/design.scss
@@ -36,29 +36,6 @@ a:hover
     text-decoration: underline;
 }
 
-:target
-{
-    animation-name: highlight;
-    animation-duration: 0.5s;
-    animation-iteration-count: 2;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
-    opacity: 1;
-}
-
-@keyframes highlight
-{
-    from
-    {
-        opacity: 1;
-    }
-
-    to
-    {
-        opacity: 0;
-    }
-}
-
 body > header
 {
     background-color: inherit;
@@ -112,20 +89,21 @@ body > header
         color: $accent-color;
     }
 
-    a.anchor
+    a.fragment
     {
+        display: inline-block;
+        width: 1em;
+        height: 1em;
         color: inherit;
+        background-image: url('link.svg');
+        background-size: contain;
+        opacity: 0;
+    }
 
-        &:hover
-        {
-            text-decoration: none;
-        }
-
-        &:hover::after
-        {
-            content: "#";
-            color: $accent-color;
-        }
+    *:hover a.fragment
+    {
+        text-decoration: none;
+        opacity: 1;
     }
 }
 
