--- a/style/design.scss
+++ b/style/design.scss
@@ -36,7 +36,7 @@ a:hover
     text-decoration: underline;
 }
 
-body > header
+header
 {
     background-color: inherit;
     box-shadow: 0 2px 5px rgba(black, 0.3);
@@ -56,7 +56,7 @@ body > header
     }
 }
 
-.content nav
+main nav
 {
     border-radius: 5px;
     box-shadow: inset 0 0 3px rgba(black, 0.3);
@@ -82,7 +82,7 @@ body > header
     }
 }
 
-.content article
+article
 {
     a
     {
@@ -106,7 +106,6 @@ body > header
         opacity: 1;
     }
 }
-
 
 footer
 {
