--- a/style/design.scss
+++ b/style/design.scss
@@ -6,12 +6,19 @@ $text-color: rgba(black, 0.7);
 
 @mixin background
 {
-    opacity: 0.5;
+    opacity: 0.7;
 
     &:hover
     {
         opacity: 1.0;
     }
+}
+
+@mixin overlay
+{
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(black, 0.3);
+    //box-shadow: inset 0 0 3px rgba(black, 0.3);
 }
 
 body
@@ -58,8 +65,7 @@ header
 
 main nav
 {
-    border-radius: 5px;
-    box-shadow: inset 0 0 3px rgba(black, 0.3);
+    @include overlay;
 
     ul
     {
@@ -105,6 +111,13 @@ article
         text-decoration: none;
         opacity: 1;
     }
+}
+
+pre
+{
+    //@include overlay;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
 footer
